--- a/source/thememodifier.yaml
+++ b/source/thememodifier.yaml
@@ -5,19 +5,19 @@ Constants:
     - DetailsViewShowInfoPanelDefault: 'Show information panel by default'
     - DetailsViewBackgroundVerticalAlignment: 'Vertical alignment of the background image'
     - DetailsViewBackgroundHorizontalAlignment: 'Horizontal alignment of the background image'
-    - DetailsViewAllowUseOfLogos: 'Allow use of Extra Metadata Loader logos'
+    - DetailsViewAllowUseOfLogos: 'Allow use of logos (Requires Extra Metadata Loader extension)'
     - DetailsViewShowHltbDataGrid: 'Show HowLongToBeat data grid'
     - DetailsViewLibraryGameShowFavorite: 'Show favorites icon in game list'
     - "Grid View Details"
     - GridViewPlaceDescriptionAtBottom: 'Place game description at the bottom'
+    - GridViewDetailsIconsVisibility: 'Visibility of icons in details'
+    - GridViewAllowUseOfLogos: 'Allow use of logos (Requires Extra Metadata Loader extension)'
     - GridViewDisplayGameNameIfLogoVisible: 'Display game name if logo is visible'
-    - GridViewAllowUseOfLogos: 'Allow use of Extra Metadata Loader logos'
-    - GridViewShowHltbDataGrid: 'Show HowLongToBeat data grid'
+    - GridViewShowHltbDataGrid: 'Show HowLongToBeat data grid (Requires HowLongToBeat extension)'
     - "Grid View Covers"
     - GridViewCoverSubtitleVisibility: 'Visibility of time played under game covers'
     - GridViewEnableCoverShineAnimation: 'Enable cover highlight animation on hover'
-    - GridViewEnablePlayingGlowBorder: 'Show glow animation on covers in games that are running'
+    - GridViewEnablePlayingGlowBorder: 'Show glow animation if game is running'
     - GridViewLibraryGameShowFavorite: 'Show favorites icon'
-    - GridViewCoverDisplayLibraryBanner: 'Show game platforms and library banners'
+    - GridViewCoverDisplayLibraryBanner: 'Show banners (Requires ThemeExtras extension)'
     - GridViewCoverUseRoundedCorners: 'Use rounded corners'
-    - GridViewDetailsIconsVisibility: 'Visibility of icons in details'
