GridView: Added shadow effect to covers. Enabled by default. Can be configured with ThemeModifier extension

--- a/source/thememodifier.yaml
+++ b/source/thememodifier.yaml
@@ -21,3 +21,4 @@ Constants:
     - GridViewLibraryGameShowFavorite: 'Show favorites icon'
     - GridViewCoverDisplayLibraryBanner: 'Show banners (Requires ThemeExtras extension)'
     - GridViewCoverUseRoundedCorners: 'Use rounded corners'
+    - GridViewCoverDisplayDropShadowEffect: 'Use dropshadow effect'
