--- a/manifests/Installer_Manifest.yaml
+++ b/manifests/Installer_Manifest.yaml
@@ -363,3 +363,12 @@ Packages:
     Changelog:
       - 'Fixed link to Review Viewer plugin (#36)'
       - 'Grid View: Added ThemeModifier extension option to disable zoom on hover for covers'
+  - Version: 1.40
+    RequiredApiVersion: 2.4.0
+    ReleaseDate: 2023-01-06
+    PackageUrl: https://github.com/darklinkpower/Helium/releases/download/1.40/8b15c46a-90c2-4fe5-9ebb-1ab25ba7fcb1_1_40.pthm
+    Changelog:
+      - 'Details View and Grid View: Added support for custom UI elements of CheckDLC extension'
+      - 'Details View: Fix Play button panel section changing height when resizing window if Completion Status did not fit'
+      - 'DetailsView: Support to display game supported languages via CheckLocalization extension support'
+      - 'Grid View: Changes to animation in game cover when game is running'
