--- a/source/thememodifier.yaml
+++ b/source/thememodifier.yaml
@@ -29,6 +29,7 @@ Constants:
     - "Grid View Covers"
     - GridViewCoverZoomOnHover: 'Zoom when hovered'
     - GridViewCoverSubtitleVisibility: 'Visibility of time played under game covers'
+    - GridViewCoverCompStatusSubtitleVisibility: 'Visibility of Completion Status under game covers'
     - GridViewEnableCoverShineAnimation: 'Enable cover highlight animation on hover'
     - GridViewEnablePlayingGlowBorder: 'Show glow animation if game is running'
     - GridViewLibraryGameShowFavorite: 'Show favorites icon'
