--- a/source/theme.yaml
+++ b/source/theme.yaml
@@ -6,5 +6,9 @@ Version: 1.41
 Links:
 - Name: GitHub
   Url: https://github.com/darklinkpower/Helium
-- Name: Playnite Forums thread
-  Url: https://playnite.link/forum/thread-811.html
+- Name: Issues Tracker
+  Url: https://github.com/darklinkpower/Helium/issues
+- Name: Support (Discord)
+  Url: https://discord.com/channels/365863063296933888/808419347105447957
+- Name: Ko-fi (Tips and Donations)
+  Url: https://ko-fi.com/darklinkpower
