--- a/manifests/Installer_Manifest.yaml
+++ b/manifests/Installer_Manifest.yaml
@@ -425,3 +425,12 @@ Packages:
       - 'Grid View: Disable library items dropshadow effect by default'
       - 'Grid View: Library view items layout changes to improve performance. Duplicate Hider extension selector on covers removed for performance reasons.'
       - 'SearchView: Fix some items images not properly scaling'
+  - Version: 1.47
+    RequiredApiVersion: 2.5.0
+    ReleaseDate: 2023-08-09
+    PackageUrl: https://github.com/darklinkpower/Helium/releases/download/1.47/8b15c46a-90c2-4fe5-9ebb-1ab25ba7fcb1_1_47.pthm
+    Changelog:
+      - 'Details View: Added DuplicateHider extension selector to game details'
+      - 'Grid View: Improved performance when covers dropshadows are enabled'
+      - 'Grid View: Fix covers rounded corners not applying when dropshadow effect is also enabled'
+      - 'Grid View: Improved visibility of favorite icon on game covers'
