Update release manifests

--- a/manifests/Installer_Manifest.yaml
+++ b/manifests/Installer_Manifest.yaml
@@ -479,3 +479,12 @@ Packages:
     PackageUrl: https://github.com/darklinkpower/Helium/releases/download/1.53/8b15c46a-90c2-4fe5-9ebb-1ab25ba7fcb1_1_53.pthm
     Changelog:
       - 'Fixed: Game cover container in Grid View changing height when hovering in certain aspect ratios'
+  - Version: 1.54
+    RequiredApiVersion: 2.5.0
+    ReleaseDate: 2024-03-14
+    PackageUrl: https://github.com/darklinkpower/Helium/releases/download/1.54/8b15c46a-90c2-4fe5-9ebb-1ab25ba7fcb1_1_54.pthm
+    Changelog:
+      - 'Added: Button to toggle favorite status in game details when using the ThemeExtras extension.'
+      - 'Added: Dropdown menu in game details to change the completion status when using the ThemeExtras extension.'
+      - 'Added: Display website icons next to links on game details when using the ThemeExtras extension.'
+      - 'Added: Navigation buttons in TopPanel when using the ThemeExtras extension. Can be disabled with ThemeModifier extension.'
