--- a/manifests/Installer_Manifest.yaml
+++ b/manifests/Installer_Manifest.yaml
@@ -488,3 +488,10 @@ Packages:
       - 'Added: Dropdown menu in game details to change the completion status when using the ThemeExtras extension.'
       - 'Added: Display website icons next to links on game details when using the ThemeExtras extension.'
       - 'Added: Navigation buttons in TopPanel when using the ThemeExtras extension. Can be disabled with ThemeModifier extension.'
+  - Version: 1.55
+    RequiredApiVersion: 2.5.0
+    ReleaseDate: 2024-03-17
+    PackageUrl: https://github.com/darklinkpower/Helium/releases/download/1.55/8b15c46a-90c2-4fe5-9ebb-1ab25ba7fcb1_1_55.pthm
+    Changelog:
+      - 'Changed: Changed default cover image aspect ratio to 2:3'
+      - 'Fixed: Certain menu icons not changing color when hovering mouse'
