Update release manifests

--- a/manifests/Installer_Manifest.yaml
+++ b/manifests/Installer_Manifest.yaml
@@ -516,3 +516,15 @@ Packages:
       - 'Changed: the default value in some theme options'
       - 'Fixed: HLTB rows showing even if they have no data after its latest update'
       - 'Reorder ThemeModifier extension sections'
+  - Version: 1.59
+    RequiredApiVersion: 2.5.0
+    ReleaseDate: 2024-11-06
+    PackageUrl: https://github.com/darklinkpower/Helium/releases/download/1.59/8b15c46a-90c2-4fe5-9ebb-1ab25ba7fcb1_1_59.pthm
+    Changelog:
+      - 'Added: Game cover banners for library plugins: ATLauncher Instance Library, Big Fish Games library integration, EmuLibrary, Fanatical library integration, Game Jolt library integration, GameVault Library Integration, GOG OSS library integration, Google Play Games on PC Library, Humble Keys Library, LANCommander library integration, Meta Quest/Oculus Library Plugin, MultiMC Library Importer, Nile (Amazon) library integration, NowPlaying Game Cacher, RAWG library importer, RobotCache library integration, RomM Library Importer, Viveport library importer.'
+      - 'Added: Option to apply dropshadow effect on panels on Details View using the ThemeModifier extension.'
+      - 'Changed: Disabled dropshadow effect on panels on Details View to improve performance'
+      - 'Changed: Changes to improve performance on Details View.'
+      - 'Fixed: Cover dropshadow border displaying when cover is not visible.'
+      - 'Fixed: Panel separator between Library and Details on Grid View not displaying when using Details to Grid View Converter extension'
+      - 'General polishing'
