--- a/manifests/Installer_Manifest.yaml
+++ b/manifests/Installer_Manifest.yaml
@@ -537,3 +537,10 @@ Packages:
       - 'Changed: Some colors to match colors that have been updated on Steam'
       - 'Changed: Visual changes to Filter and Notifications buttons on Top Paneñ to look similar to Steam'
       - 'Fixed: Black rectangle artifact displaying in cover location when it is disabled in settings'
+  - Version: 1.61
+    RequiredApiVersion: 2.5.0
+    ReleaseDate: 2024-11-13
+    PackageUrl: https://github.com/darklinkpower/Helium/releases/download/1.61/8b15c46a-90c2-4fe5-9ebb-1ab25ba7fcb1_1_61.pthm
+    Changelog:
+      - 'Added: Game cover banner for Riot Games Library plugin'
+      - 'Added: Support to use web view component from Web Explorer extension'
