--- a/manifests/Installer_Manifest.yaml
+++ b/manifests/Installer_Manifest.yaml
@@ -551,3 +551,11 @@ Packages:
     Changelog:
       - 'Added: Star ratings from 0 to 5 will now be displayed alongside the critic, user and community numerical scores, providing a clearer visual representation of the game ratings'
       - 'Changed: Icons on Details View & Grid View will now be displayed with rounded corners'
+  - Version: 1.63
+    RequiredApiVersion: 2.5.0
+    ReleaseDate: 2024-11-28
+    PackageUrl: https://github.com/darklinkpower/Helium/releases/download/1.63/8b15c46a-90c2-4fe5-9ebb-1ab25ba7fcb1_1_63.pthm
+    Changelog:
+      - 'Added: Option to configure the display of the game name in the Details View when the logo is visible.'
+      - 'Changed: Display the game name if the logo is not visible in the Details View.'
+      - 'Changed: Icons in the Details View now display in a uniform square area for better alignment.'
