--- a/manifests/Installer_Manifest.yaml
+++ b/manifests/Installer_Manifest.yaml
@@ -583,3 +583,10 @@ Packages:
     PackageUrl: https://github.com/darklinkpower/Helium/releases/download/1.67/8b15c46a-90c2-4fe5-9ebb-1ab25ba7fcb1_1_67.pthm
     Changelog:
       - 'Update to theme changes in Playnite v10.36'
+  - Version: 1.68
+    RequiredApiVersion: 2.8.0
+    ReleaseDate: 2025-06-21
+    PackageUrl: https://github.com/darklinkpower/Helium/releases/download/1.68/8b15c46a-90c2-4fe5-9ebb-1ab25ba7fcb1_1_68.pthm
+    Changelog:
+      - 'Top Panel: Added option to configure the width of the search box'
+      - 'Note: Added options can be configured using the ThemeModifier extension'
