Change theme YAML

--- a/source/theme.yaml
+++ b/source/theme.yaml
@@ -1,7 +1,7 @@
 ThemeApiVersion: 2.8.0
-Id: 8b15c46a-90c2-4fe5-9ebb-1ab25ba7fcb1
-Name: Helium
-Author: darklinkpower
+Id: b46f5ca0-be71-4398-b924-216c7c20efdd
+Name: Helium (kkcd fork)
+Author: darklinkpower, KKCD
 Version: 1.68
 Links:
 - Name: GitHub
